# T4-safe-citadel-backend

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  auth.py  dependencies.py  docker-compose.yml  main.py  newrelic.ini  pyproject.toml  requirements.txt  script.sh
.github/workflows/: deploy.yml  pytest.yml
alembic/: env.py
alembic/versions/: 090303ed39a5_migrations.py  0cca0828c813_migrations.py  166a9d327a82_migrations.py  20277478b112_migrations.py  261fef2ae4f4_migrations.py  268e20a719f4_migrations.py  2b0eb70d4265_migrations.py  2c732117112b_migrations.py  4f362dd006b4_migrations.py  50739560717a_.py  6f561da2d260_migrations.py  7b7db259c400_.py  7c2f0a567e96_migrations.py  7e3fdd9172c7_migrations2.py  860c536f11c8_migrations.py  99918de266dd_migrations.py  9b2cadb7b34b_migrations.py  aa487e6c68c7_migrations.py  afd4a77b6778_init.py  b2fbf5af2137_migrations.py  b62b829b8f0a_migrations.py  b8cfb3868838_migrations.py  ccc6c9b5996d_migrations.py  d488a3bca906_migrations.py  d9c6c3018d84_migrations.py  f08e2bfac05a_migrations.py
config/: database.py
migrations/: env.py
migrations/versions/: 07764d4c3f15_migrations.py  1298c4237f78_migrations.py  1a101cc9935c_migrations.py  261def10978f_migrations.py  2c5b148d2f81_migrations.py  (+13 more)
src/: .env  admin.py  auth.py  crud.py  models.py  router.py  schema.py  tasks.py  utils.py
templates/: index.html
tests/: test_auth.py  test_login.py  test_model.py  test_qr.py  test_router.py  test_token.py  test_user.py  test_utils.py  test_visit.py  test_visitor.py
(+1 files in other folders)
